--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vidly",
+  "name": "pern-todo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --detectOpenHandles",
-    "start": "node index.js"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "test": "jest --verbose --detectOpenHandles"
   },
   "engines": {
     "node": "21.7.3"
@@ -15,19 +16,43 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "config": "^3.3.11",
-    "express": "^4.16.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "fawn": "^2.1.5",
     "helmet": "^7.1.0",
-    "joi": "^13.7.0",
+    "joi": "^17.11.0",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.22"
+    "mongoose": "^5.13.22",
+    "nodemon": "^3.1.3",
+    "pg": "^8.11.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "-": "^0.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/compression": "^1.7.5",
+    "@types/config": "^3.3.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.14.1",
+    "@types/pg": "^8.11.6",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.4",
+    "ts-migrate": "^0.1.35",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
